--- a/code/package.json
+++ b/code/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "xlsx": "^0.16.9"
   }
 }
